Sat Aug 30 19:22:47 2014  Eric Wong  <e@80x24.org>

	* symbol.c (rb_sym2id): do not return garbage object

Sat Aug 30 06:39:48 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix NameError dumping and
	  loading. Fixes GH #85. Thanks @brentdax for the patch!
	* test/psych/test_exception.rb: test for fix

Sat Aug 30 06:23:40 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix loading strings that
	  look like integers but have a newline. Fixes GH #189
	* test/psych/test_string.rb: test for fix

Sat Aug 30 06:10:39 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys with a hash
	  should merge the hash in to the parent.
	* test/psych/test_merge_keys.rb: test for change. Fixes GH #202

Sat Aug 30 06:00:26 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: quoted "<<" strings
	  should not be treated as merge keys.
	* ext/psych/lib/psych/visitors/yaml_tree.rb: hashes with keys
	  containing "<<" should roundtrip.
	* test/psych/test_merge_keys.rb: test for change. Fixes GH #203

Fri Aug 29 17:56:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/imap/test_imap_response_parser.rb: removed needless code.

Fri Aug 29 17:36:58 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/rinda/test_rinda.rb: removed useless assignment variables.
	* test/rss/rss-assertions.rb: ditto.
	* test/rss/test_maker_itunes.rb: ditto.

Fri Aug 29 16:18:26 2014  Eric Wong  <e@80x24.org>

	* string.c: revert part of r47311, add rb_vm_fstring_table(),
	  remove vm_core.h dependency. [ruby-core:64627]

Fri Aug 29 15:17:13 2014  Eric Wong  <e@80x24.org>

	* string.c: remove static frozen_strings
	* string.c (Init_frozen_strings): new function
	* string.c (rb_fstring): remove check for frozen strings,
	  use per-VM table
	* string.c (rb_str_free): use per-VM table